# adaptive-mlip

./: .gitignore  ARCHITECTURAL_ANALYSIS.md  ARCHITECTURAL_CHANGES.md  O.upf  README.md  config_dry_run.yaml  data_35d40065.lmp  fix_defaults.py  fix_descriptor.py  fix_descriptor2.py  fix_dict_kwargs.py  fix_generator.py  fix_generator_test2.py  fix_generator_test3.py  fix_generator_test4.py  fix_generator_test5.py  fix_generator_test6.py  fix_generator_test7.py  fix_io.py  fix_lammps_generator.py  fix_mock_desc.py  fix_mock_oracle.py  fix_orchestrator.py  fix_orchestrator2.py  fix_policy_refs.py  fix_policy_typing.py  fix_pydantic_error.py  fix_pydantic_error_loop.py  fix_remaining.py  fix_sampling.py  fix_test.py  fix_test_generator.py  fix_test_loop.py  fix_test_orchestrator.py  fix_test_orchestrator10.py  fix_test_orchestrator11.py  fix_test_orchestrator12.py  fix_test_orchestrator2.py  fix_test_orchestrator3.py  fix_test_orchestrator4.py  (+16 more)
dev_documents/: ALL_SPEC.md  USER_TEST_SCENARIO.md
dev_documents/CYCLE01/: SPEC.md  test_execution_log.txt
dev_documents/CYCLE02/: test_execution_log.txt
dev_documents/CYCLE04/: test_execution_log.txt
dev_documents/CYCLE05/: test_execution_log.txt
dev_documents/CYCLE06/: test_execution_log.txt
dev_documents/CYCLE07/: test_execution_log.txt
dev_documents/CYCLE08/: test_execution_log.txt
dev_documents/system_prompts/: SYSTEM_ARCHITECTURE.md
src/pyacemaker/: __init__.py  config.py  constants.py  factory.py  logger.py  main.py  orchestrator.py
tests/: conftest.py  constants.py
tutorials/: UAT_AND_TUTORIAL.py
(+192 files in other folders)
