[project]
name = "amlip"
version = "0.1.0"
description = "Adaptive machine learning interatomic potentials"
readme = "README.md"
requires-python = "==3.12.4"
dependencies = [
    "mypy>=1.19.1",
    "ruff>=0.15.2",
]
authors = [
    { name = "Tomoyuki Tsuyama", email = "tomoyuki.tsuyaman@gmail.com" }
]
